<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:id="@+id/child_card_view"
    android:transitionName="@string/cardName"
    android:foreground="?selectableItemBackgroundBorderless"
    app:cardCornerRadius="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/image_view_cover"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            android:transitionName="@string/imageName"
            app:riv_corner_radius="8dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/child_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/child_text_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/app_name" />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>

