<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/music_list_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/primaryColor"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/music_list_card_view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="8dp"
        android:transitionName="@string/cardName"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/music_list_tool_bar"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/music_list_image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_test_open"
                android:transitionName="@string/imageName"
                app:riv_corner_radius="8dp" />

            <TextView
                android:id="@+id/music_list_text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/music_list_image_view"
                android:lines="1"
                android:ellipsize="end"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/music_list_text_view_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/music_list_text_view_title"
                android:layout_toEndOf="@id/music_list_image_view"
                android:text="@string/app_name"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/music_list_text_view_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/music_list_text_view_avatar"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/music_list_image_view"
                android:ellipsize="end"
                android:lines="6"
                android:text="@string/detail" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/music_list_card_view" />


</androidx.constraintlayout.widget.ConstraintLayout>