<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="28dp">

    <TextView
        android:id="@+id/dialog_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ids">

        <EditText
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/ids"
            android:inputType="number"
            android:lines="1"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/primaryColor"
        android:textColor="@color/primaryTextColor"
        android:elevation="4dp"
        android:visibility="visible"
        android:text="@string/ok" />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_progress_bar"
        android:visibility="gone"/>


</LinearLayout>